--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,4 +1,4 @@
 app.jdbc.driverClassName=com.mysql.jdbc.Driver
-app.jdbc.url=jdbc:mysql://localhost:3306/test_db?autoReconnect=true&useUnicode=true&characterEncoding=utf-8
-app.jdbc.username=regUsers
-app.jdbc.password=Reg5W0rd4PASS
+app.jdbc.url=jdbc:mysql://localhost:3306/db_crudMis?autoReconnect=true&useUnicode=true&characterEncoding=utf-8
+app.jdbc.username=crud_mis
+app.jdbc.password=m1$4PASS
